--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,8 +88,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation("com.squareup.moshi:moshi:1.13.0")
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9'
 
     implementation "androidx.datastore:datastore-core:1.0.0"
     implementation "androidx.datastore:datastore:1.0.0"
+
+    // Preferences DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
 }
